# Weather-Agent-CLI

./: .gitignore  CHANGELOG.md  README.md  __main__.py  agent.py  config.py  install.sh  pyproject.toml  ui.py
docs/: mockup-terminal.html
docs/superpowers/plans/: 2026-06-18-rich-cli-frontend.md
docs/superpowers/specs/: 2026-06-18-rich-cli-design.md  2026-06-19-startup-animation-design.md
