[project]
name = "weather-cli"
version = "1.3.0"
description = "和风天气 CLI Agent"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "python-dotenv",
    "rich>=13.0",
    "pyfiglet>=1.0",
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
]

[project.scripts]
weather-cli = "agent:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent", "config", "ui"]